--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,28 +2,31 @@ name: TrackNote Auto Release
 
 on:
   push:
-    branches:
-      - main
-      - master
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Decode keystore
+      - name: Restore google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
+
+      - name: Restore keystore
         run: |
           mkdir -p app/keystore
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/keystore/my-release-key.jks
@@ -31,35 +34,16 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      - name: Build signed release APK
+      - name: Build release APK
         run: ./gradlew assembleRelease
 
-      - name: Get version info
-        id: version
+      - name: Rename APK
         run: |
-          VERSION_CODE=$(grep versionCode app/build.gradle | head -1 | awk '{print $2}')
-          VERSION_NAME=$(grep versionName app/build.gradle | head -1 | awk -F\" '{print $2}')
-          echo "code=$VERSION_CODE" >> $GITHUB_OUTPUT
-          echo "name=$VERSION_NAME" >> $GITHUB_OUTPUT
+          mv app/build/outputs/apk/release/app-release.apk tracknote.apk
 
-      - name: Prepare release folder
-        run: |
-          mkdir -p releases
-          cp app/build/outputs/apk/release/app-release.apk releases/tracknote_v${{ steps.version.outputs.code }}.apk
-
-      - name: Generate update.json
-        run: |
-          cat > update.json <<EOF
-          {
-            "versionCode": ${{ steps.version.outputs.code }},
-            "apkUrl": "https://raw.githubusercontent.com/angel-0210/TrackNote/main/releases/tracknote_v${{ steps.version.outputs.code }}.apk"
-          }
-          EOF
-
-      - name: Commit APK and update.json
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add releases update.json
-          git commit -m "Auto release v${{ steps.version.outputs.code }}" || echo "No changes"
-          git push
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: tracknote.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
