--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,17 +25,12 @@ jobs:
       - name: Restore google-services.json
         run: |
           mkdir -p app
-          cat << 'EOF' > app/google-services.json
-          ${{ secrets.GOOGLE_SERVICES_JSON }}
-          EOF
+          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
           
       - name: Verify google-services.json
         run: |
-          echo "Listing app folder:"
           ls -la app
-          echo "File size:"
           wc -c app/google-services.json
-
 
       - name: Restore keystore
         run: |
