--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,6 +26,12 @@ jobs:
         run: |
           mkdir -p app
           echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
+      - name: Validate google-services.json
+        run: |
+          if [ ! -s app/google-services.json ]; then
+            echo "❌ google-services.json is empty or missing"
+            exit 1
+          fi
           
       - name: Verify google-services.json
         run: |
