--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Restore google-services.json
         run: |
           mkdir -p app
-          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/src/google-services.json
+          
       - name: Validate google-services.json
         run: |
           if [ ! -s app/google-services.json ]; then
