--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup JDK 17
@@ -21,24 +21,20 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-          
+
+      # 🔐 Restore google-services.json (CRITICAL STEP)
       - name: Restore google-services.json
         run: |
           mkdir -p app
-          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/src/google-services.json
-          
-      - name: Validate google-services.json
-        run: |
-          if [ ! -s app/google-services.json ]; then
-            echo "❌ google-services.json is empty or missing"
-            exit 1
-          fi
-          
+          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
+
+      # 🧪 Verify file exists
       - name: Verify google-services.json
         run: |
           ls -la app
           wc -c app/google-services.json
 
+      # 🔐 Restore keystore
       - name: Restore keystore
         run: |
           mkdir -p app/keystore
@@ -47,12 +43,12 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
+      # 🚀 Build APK
       - name: Build release APK
         run: ./gradlew assembleRelease
 
       - name: Rename APK
-        run: |
-          mv app/build/outputs/apk/release/app-release.apk tracknote.apk
+        run: mv app/build/outputs/apk/release/app-release.apk tracknote.apk
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
