--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -22,19 +22,21 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # 🔐 Restore google-services.json (CRITICAL STEP)
+      #  Restore google-services.json from ENV VARIABLE
       - name: Restore google-services.json
         run: |
           mkdir -p app
-          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
+          cat << 'EOF' > app/google-services.json
+          ${{ secrets.GOOGLE_SERVICES }}
+          EOF
 
-      # 🧪 Verify file exists
+      #  Verify file exists and is NOT empty
       - name: Verify google-services.json
         run: |
           ls -la app
           wc -c app/google-services.json
 
-      # 🔐 Restore keystore
+      #  Restore keystore
       - name: Restore keystore
         run: |
           mkdir -p app/keystore
@@ -43,7 +45,7 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      # 🚀 Build APK
+      #  Build APK
       - name: Build release APK
         run: ./gradlew assembleRelease
 
