--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -24,11 +24,8 @@ jobs:
           
       - name: Restore google-services.json
         run: |
-          mkdir -p app/src/release
-      
-          cat << 'EOF' > app/src/release/google-services.json
-          ${{ secrets.GOOGLE_SERVICES_JSON }}
-          EOF
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 --decode > app/google-services.json
+
 
       - name: Verify google-services.json
         run: |
