--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,52 +1,35 @@
-name: TrackNote Auto Release
+name: Build Release APK
 
 on:
   push:
-    tags:
-      - "v*.*.*"
-
-permissions:
-  contents: write
+    branches: [ master ]
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-          
 
-      #  Restore keystore
-      - name: Restore keystore
+      - name: Restore google-services.json
         run: |
-          mkdir -p app/keystore
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/keystore/my-release-key.jks
+          mkdir -p app
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 -d > app/google-services.json
 
-      - name: Make Gradle executable
+      - name: Debug google-services.json
+        run: |
+          ls -la app
+          head -n 5 app/google-services.json
+
+      - name: Grant execute permission
         run: chmod +x ./gradlew
-        
-      - name: Decode Google Services JSON
-        env:
-          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $GOOGLE_SERVICES_JSON | base64 --decode > app/google-services.json
 
-      #  Build APK
-      - name: Build release APK
+      - name: Build signed release APK
         run: ./gradlew assembleRelease
-
-      - name: Rename APK
-        run: mv app/build/outputs/apk/release/app-release.apk tracknote.apk
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: tracknote.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
