--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,10 +23,10 @@ jobs:
           mkdir -p app
           echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 -d > app/google-services.json
 
-      - name: Debug google-services.json
+      - name: Restore release keystore
         run: |
-          ls -la app
-          head -n 5 app/google-services.json
+          mkdir -p app/keystore
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > app/keystore/my-release-key.jks
 
       - name: Grant execute permission
         run: chmod +x ./gradlew
