--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,4 +32,8 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build signed release APK
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: ./gradlew assembleRelease
