--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -55,15 +55,15 @@ jobs:
       - name: Update update.json
         run: |
           jq \
-            --arg vc "${{ steps.version.outputs.versionCode }}" \
-            --arg vn "${{ steps.version.outputs.versionName }}" \
+            --arg vc "3" \
+            --arg vn "2.1.2" \
             --arg url "https://your-domain.com/app-release.apk" \
-            --arg log "New release ${{ steps.version.outputs.versionName }}" \
+            --arg log "New release 2.1.2" \
             '.versionCode=($vc|tonumber) |
              .versionName=$vn |
              .apkUrl=$url |
              .changelog=$log' \
-            update.json > tmp.json && mv tmp.json update.json
+            app/update.json > tmp.json && mv tmp.json app/update.json
 
       # -----------------------------
       # Commit update.json
@@ -72,15 +72,18 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add update.json
-          git commit -m "Update update.json for release ${{ steps.version.outputs.versionName }}" || echo "No changes"
+          git add app/update.json
+          git commit -m "Update update.json for release" || echo "No changes"
           git push
 
       # -----------------------------
       # Upload APK
       # -----------------------------
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: app-release
-          path: app/build/outputs/apk/release/app-release.apk
+          tag_name: v${{ steps.version.outputs.versionName }}
+          name: TrackNote v${{ steps.version.outputs.versionName }}
+          files: app/build/outputs/apk/release/app-release.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
