--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -8,6 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write   # allow workflow to push commits
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -37,7 +40,8 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: ./gradlew assembleRelease
- # -----------------------------
+
+      # -----------------------------
       # Extract version info
       # -----------------------------
       - name: Read version info
@@ -55,10 +59,10 @@ jobs:
       - name: Update update.json
         run: |
           jq \
-            --arg vc "3" \
-            --arg vn "2.1.2" \
+            --arg vc "${{ steps.version.outputs.versionCode }}" \
+            --arg vn "${{ steps.version.outputs.versionName }}" \
             --arg url "https://your-domain.com/app-release.apk" \
-            --arg log "New release 2.1.2" \
+            --arg log "New release ${{ steps.version.outputs.versionName }}" \
             '.versionCode=($vc|tonumber) |
              .versionName=$vn |
              .apkUrl=$url |
@@ -69,12 +73,14 @@ jobs:
       # Commit update.json
       # -----------------------------
       - name: Commit update.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add app/update.json
           git commit -m "Update update.json for release" || echo "No changes"
-          git push
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
 
       # -----------------------------
       # Upload APK
